ssl-ingress/createpod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      volumes:
      - name: nginx-storage
        persistentVolumeClaim:
            claimName: kube-pvc
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
            - name: nginx-storage
              subPath: nginx
              mountPath: /usr/share/nginx/html
        resources: {}
status: {}
